[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,10 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            Here's my Test Web App.
+        </div>
+        <div class="text text-success">
+            <i>This is a part of the IMAD course</i>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
