--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Here's my Test Web App.
         </div>
-        <div class="text text-success">
+        <div class="center text-small">
             <i>This is a part of the IMAD course</i>
         </div>
         <script type="text/javascript" src="/ui/main.js">
