--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <title>Web App - Part of IMAD Course by IIT-M</title>
     </head>
     <body>
         <div class="center">
