--- a/ui/profile.html
+++ b/ui/profile.html
@@ -5,11 +5,14 @@
 <body>
 <div>
 <h1> This is a sample profile page that shows the latest tweets from my timeline </h1>
-<hr>
-<a class="twitter-timeline" href="https://twitter.com/Atulmaharaj">Tweets by Atulmaharaj</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 <div>
 <p><i>If you are on Twitter, follow me here: <a href="https://twitter.com/Atulmaharaj" class="twitter-follow-button" data-show-count="false">Follow @Atulmaharaj</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></i></p>
 </div>
+<div>
+<hr>
+<a class="twitter-timeline" href="https://twitter.com/Atulmaharaj">Tweets by Atulmaharaj</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+
 </body>
 </html>
