[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Profile - TechMaharaj</title>
-<head>
+</head>
 <body>
 <div>
 <h1> This is a sample profile page that shows the latest tweets from my timeline </h1>
