[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,10 @@
         <div class="center text-small">
             <i>This is a part of the IMAD course</i>
         </div>
+        <div>
+            <br>
+            Here's my <a href="profile.html">Profile</a> Page !
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
