[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -3,6 +3,9 @@
 <title>Profile - TechMaharaj</title>
 </head>
 <body>
+    <div>
+        <a href="ui/index.html">Home</a>
+    </div>
 <div>
 <h1> This is a sample profile page that shows the latest tweets from my timeline </h1>
 </div>
