[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,9 +15,9 @@
         <div class="center text-small">
             <i>This is a part of the IMAD course</i>
         </div>
-        <div>
+        <div class="center">
             <br>
-            Here's my <a href="profile.html">Profile</a> Page !
+            Here's my <a href="ui/profile.html">Profile</a> Page !
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
