[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="center">
             <br>
-            Here's my <a href="ui/profile.html">Profile</a> Page !
+            Here's my <a href="profile">Profile</a> Page !
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
