[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -1,12 +1,19 @@
 <html>
 <head>
 <title>Profile - TechMaharaj</title>
+<style>
+    .container
+    {
+        width=80%;
+    }
+</style>
 </head>
 <body>
     <div>
-        <a href="ui/index.html">Home</a>
+        <a href="/">Home</a>
     </div>
-<div>
+<div class="container">
+    <div>
 <h1> This is a sample profile page that shows the latest tweets from my timeline </h1>
 </div>
 <div>
@@ -15,6 +22,7 @@
 <div>
 <hr>
 <a class="twitter-timeline" href="https://twitter.com/Atulmaharaj">Tweets by Atulmaharaj</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
 </div>
 
 </body>
