[imad-console] Updates ui/profile.html

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -1,12 +1,7 @@
 <html>
 <head>
 <title>Profile - TechMaharaj</title>
-<style>
-    .container
-    {
-        max-width=80%;
-    }
-</style>
+<link href="/ui/style.css" rel="stylesheet" />
 </head>
 <body>
     <div>
